[package]
name = "demo-webapp-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.17"
wgpu = { version = "0.14", features = ["webgl"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = [
    'MessageEvent',
    'OffscreenCanvas',
    "Worker",
    "WorkerGlobalScope",
    "WorkerNavigator"
]}
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
