install_data(
	[
		'background.png',
		'border.png',
		'fullscreen.png',
		'home.png',
		'icon_editor.png',
		'icon_flower.png',
		'icon_ivi_clickdot.png',
		'icon_ivi_flower.png',
		'icon_ivi_simple-egl.png',
		'icon_ivi_simple-shm.png',
		'icon_ivi_smoke.png',
		'icon_terminal.png',
		'icon_window.png',
		'panel.png',
		'pattern.png',
		'random.png',
		'sidebyside.png',
		'sign_close.png',
		'sign_maximize.png',
		'sign_minimize.png',
		'terminal.png',
		'tiling.png',
		'wayland.png',
		'wayland.svg',
	],
	install_dir: join_paths(dir_data, 'weston')
)
